Refine Javassist security actions anonymous test